# PointCloudAnnotationTool

./: .gitignore  README.md
data/: bag1.txt  bag2.txt  bag3.txt  chair1.txt  chair2.txt  chair3.txt
prj/: CMakeLists.txt
src/: BNConfigReader.cpp  BNLabelStore.cpp  BNLogger.cpp  BNModel.cpp  BNPainter.cpp  BNPointCloudReader.cpp  BNSegmentator.cpp  BNState.cpp  BNView.cpp  CMakeLists.txt  cfg_file.txt  main.cpp
src/Python/hdf5_data/: catid_partid_to_overallid.json  color_partid_catid_map.txt  overallid_to_catid_partid_finetune.json
src/Python/src/: ConvertH5.py  FineTune.py  pointnet_part_seg.py  provider.py  tf_util.py
src/Python/trained_models/: checkpoint  epoch_80.ckpt.index
src/includes/: BNConfigReader.h  BNLabel.h  BNLabelStore.h  BNModel.h  BNPainter.h  BNPointCloudReader.h  BNSegmentator.h  BNState.h  BNView.h  common.h
